fixing other people's build bustage bug 43826 r=bryner